// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page-layout Example (index) layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="wmax1800 w-11/12-mm w-11/12-ml mx-auto px24 px0-mm"
  >
    <div
      className="flex-mm"
    >
      <div
        className="flex-child-no-shrink w-full w180-mm w240-ml mr36-mm undefined"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <a
                  className="txt-fancy txt-l block color-blue-on-hover color-text"
                  href="/dr-ui/"
                >
                  dr-ui
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="relative h36"
              >
                <button
                  className="w-full block"
                  onClick={[Function]}
                >
                  <div
                    className="flex flex--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round mb6 w-full"
                    style={Object {}}
                  >
                    <span
                      className="mr6 color-gray"
                    >
                      <svg
                        className="icon w18 h18"
                      >
                        <use
                          xlinkHref="#icon-search"
                        />
                      </svg>
                    </span>
                     
                    <span
                      className="color-gray"
                    >
                      Search
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <nav
              className="mx-neg12 color-text"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full flex flex--space-between-main"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/guides/"
                    >
                      Guides
                    </a>
                    <button
                      aria-controls="menu-guides"
                      aria-expanded={false}
                      aria-label="Toggle Guides menu"
                      className="flex-child-no-shrink color-blue-on-hover px12 px0-mm"
                      onClick={[Function]}
                      value="Guides"
                    >
                      <svg
                        className="events-none icon inline-block align-t"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </button>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/specification/"
                    >
                      Specification
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full bg-blue-faint color-blue-deep"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/examples/"
                    >
                      Examples
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/demo/"
                    >
                      Demo
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child-grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/dr-ui/"
            >
              dr-ui
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Examples
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col col--auto prose"
          >
            <h1
              className="txt-fancy"
            >
              Examples
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="dr-ui--page-layout-aside col w-full w-1/3-mxl"
            >
              <aside
                className="scroll-auto-mxl scroll-styled viewport-almost-mxl sticky-mxl"
                data-swiftype-index="false"
                style={
                  Object {
                    "top": "10px",
                  }
                }
              >
                <div
                  className="mb18 mb0-mxl"
                >
                  <h2
                    className="unprose txt-m txt-bold mb6"
                  >
                    Filters
                  </h2>
                  <div
                    className="grid grid--gut6"
                  >
                    <div
                      className="col w-1/2 w-1/3-ml w-full-mxl mb6"
                    >
                      <div
                        className="relative "
                      >
                        <div>
                          <label
                            className="inline-block txt-s txt-bold color-darken75"
                            htmlFor="search"
                          >
                            Search
                             
                          </label>
                        </div>
                        <input
                          aria-required={true}
                          className="input input--s relative wmax180"
                          data-test="search-input"
                          id="search"
                          name="search"
                          onChange={[Function]}
                          placeholder="Search title and description…"
                          style={
                            Object {
                              "top": "2px",
                            }
                          }
                          type="text"
                          value=""
                        />
                        <div
                          role="alert"
                        />
                      </div>
                    </div>
                    <div
                      className="col w-1/2 w-1/3-ml w-full-mxl mb6"
                    >
                      <div
                        className="relative "
                      >
                        <div>
                          <label
                            className="inline-block txt-s txt-bold color-darken75 w70"
                            htmlFor="topic"
                          >
                            Topics
                             
                          </label>
                        </div>
                        <div
                          className="select-container "
                        >
                          <select
                            aria-required={true}
                            className="select select select--s"
                            data-test="topic-select"
                            disabled={false}
                            id="topic"
                            onChange={[Function]}
                            value=""
                          >
                            <option
                              value=""
                            >
                              All topics
                            </option>
                            <option
                              value="Cool"
                            >
                              Cool
                            </option>
                            <option
                              value="Awesome"
                            >
                              Awesome
                            </option>
                          </select>
                          <div
                            className="select-arrow"
                          />
                        </div>
                        <div
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </aside>
            </div>
            <div
              className="col col--auto prose"
            >
              <div
                className="dr-ui--card-container"
              >
                <div
                  className="grid grid--gut36"
                >
                  <div
                    className="mb18 col w-full w-1/2-ml"
                  >
                    <a
                      className="dr-ui--card color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-1/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="flex mb6 txt-bold color-gray txt-s"
                        >
                          <span
                            className="flex flex--center-cross"
                          >
                            <span
                              className="mr6"
                            >
                              <svg
                                className="events-none icon"
                                focusable="false"
                                role="presentation"
                                style={
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  }
                                }
                              >
                                <use
                                  xlinkHref="#icon-code"
                                  xmlnsXlink="http://www.w3.org/1999/xlink"
                                />
                              </svg>
                            </span>
                            <span>
                              JavaScript
                            </span>
                          </span>
                        </div>
                        <div
                          className="mb6"
                        >
                          Display a map
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Initialize a map in an HTML element with Mapbox GL JS.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col w-full w-1/2-ml"
                  >
                    <a
                      className="dr-ui--card color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-2/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="flex mb6 txt-bold color-gray txt-s"
                        >
                          <span
                            className="flex flex--center-cross"
                          >
                            <span
                              className="mr6"
                            >
                              <svg
                                className="events-none icon"
                                focusable="false"
                                role="presentation"
                                style={
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  }
                                }
                              >
                                <use
                                  xlinkHref="#icon-code"
                                  xmlnsXlink="http://www.w3.org/1999/xlink"
                                />
                              </svg>
                            </span>
                            <span>
                              JavaScript
                            </span>
                          </span>
                        </div>
                        <div
                          className="mb6"
                        >
                          Add a default marker
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Add a default Marker to the map.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col w-full w-1/2-ml"
                  >
                    <a
                      className="dr-ui--card color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-3/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="flex mb6 txt-bold color-gray txt-s"
                        >
                          <span
                            className="flex flex--center-cross"
                          >
                            <span
                              className="mr6"
                            >
                              <svg
                                className="events-none icon"
                                focusable="false"
                                role="presentation"
                                style={
                                  Object {
                                    "height": 18,
                                    "width": 18,
                                  }
                                }
                              >
                                <use
                                  xlinkHref="#icon-code"
                                  xmlnsXlink="http://www.w3.org/1999/xlink"
                                />
                              </svg>
                            </span>
                            <span>
                              JavaScript
                            </span>
                          </span>
                        </div>
                        <div
                          className="mb6"
                        >
                          Extrude polygons for 3D indoor mapping
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Create a 3D indoor map with the fill-extrude-height paint property.
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn btn--blue w60 h60 round-full shadow-darken25 flex flex--center-main flex--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Example page layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="wmax1800 w-11/12-mm w-11/12-ml mx-auto px24 px0-mm"
  >
    <div
      className="flex-mm"
    >
      <div
        className="flex-child-no-shrink w-full w180-mm w240-ml mr36-mm undefined"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <a
                  className="txt-fancy txt-l block color-blue-on-hover color-text"
                  href="/dr-ui/"
                >
                  dr-ui
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="relative h36"
              >
                <button
                  className="w-full block"
                  onClick={[Function]}
                >
                  <div
                    className="flex flex--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round mb6 w-full"
                    style={Object {}}
                  >
                    <span
                      className="mr6 color-gray"
                    >
                      <svg
                        className="icon w18 h18"
                      >
                        <use
                          xlinkHref="#icon-search"
                        />
                      </svg>
                    </span>
                     
                    <span
                      className="color-gray"
                    >
                      Search
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <nav
              className="mx-neg12 color-text"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full flex flex--space-between-main"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/guides/"
                    >
                      Guides
                    </a>
                    <button
                      aria-controls="menu-guides"
                      aria-expanded={false}
                      aria-label="Toggle Guides menu"
                      className="flex-child-no-shrink color-blue-on-hover px12 px0-mm"
                      onClick={[Function]}
                      value="Guides"
                    >
                      <svg
                        className="events-none icon inline-block align-t"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </button>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/specification/"
                    >
                      Specification
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full bg-blue-faint color-blue-deep"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/examples/"
                    >
                      Examples
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/demo/"
                    >
                      Demo
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child-grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="/dr-ui/"
            >
              dr-ui
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/PageLayout/examples/"
            >
              Examples
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            An example
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col col--auto prose w-2/3-mxl w-full"
          >
            <h1
              className="txt-fancy"
            >
              An example
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="dr-ui--page-layout-aside col w-full w-1/3-mxl"
            >
              <aside
                className="scroll-auto-mxl scroll-styled viewport-almost-mxl sticky-mxl"
                data-swiftype-index="false"
                style={
                  Object {
                    "top": "10px",
                  }
                }
              >
                <div
                  className="none block-mxl"
                >
                  <button
                    className="btn"
                    onClick={[Function]}
                    value="Share"
                  >
                    Share your feedback
                  </button>
                </div>
              </aside>
            </div>
            <div
              className="col col--auto w-2/3-mxl w-full prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="my36 block none-mxl"
              >
                <button
                  className="btn"
                  onClick={[Function]}
                  value="Share"
                >
                  Share your feedback
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn btn--blue w60 h60 round-full shadow-darken25 flex flex--center-main flex--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout No sidebar, show Breadcrumbs on mobile renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="wmax1800 w-11/12-mm w-11/12-ml mx-auto px24 px0-mm"
  >
    <div
      className="flex-mm"
    >
      <div
        className="flex-child-grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/dr-ui/"
            >
              Dr. UI
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Guides
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col col--auto prose"
          >
            <h1
              className="txt-fancy"
            >
              Guides
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="col col--auto prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="my36"
              >
                <button
                  className="btn"
                  onClick={[Function]}
                  value="Share"
                >
                  Share your feedback
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn btn--blue w60 h60 round-full shadow-darken25 flex flex--center-main flex--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Page layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="wmax1800 w-11/12-mm w-11/12-ml mx-auto px24 px0-mm"
  >
    <div
      className="flex-mm"
    >
      <div
        className="flex-child-no-shrink w-full w180-mm w240-ml mr36-mm "
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <a
                  className="txt-fancy txt-l block color-blue-on-hover color-text"
                  href="/dr-ui/"
                >
                  dr-ui
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="relative h36"
              >
                <button
                  className="w-full block"
                  onClick={[Function]}
                >
                  <div
                    className="flex flex--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round mb6 w-full"
                    style={Object {}}
                  >
                    <span
                      className="mr6 color-gray"
                    >
                      <svg
                        className="icon w18 h18"
                      >
                        <use
                          xlinkHref="#icon-search"
                        />
                      </svg>
                    </span>
                     
                    <span
                      className="color-gray"
                    >
                      Search
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className=""
          >
            <nav
              className="mx-neg12 color-text"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full bg-blue-faint color-blue-deep flex flex--space-between-main"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/guides/"
                    >
                      Guides
                    </a>
                    <button
                      aria-controls="menu-guides"
                      aria-expanded={false}
                      aria-label="Toggle Guides menu"
                      className="flex-child-no-shrink color-blue-on-hover px12 px0-mm"
                      onClick={[Function]}
                      value="Guides"
                    >
                      <svg
                        className="events-none icon inline-block align-t"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 18,
                            "width": 18,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-down"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </button>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/specification/"
                    >
                      Specification
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/examples/"
                    >
                      Examples
                    </a>
                  </div>
                </li>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/demo/"
                    >
                      Demo
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child-grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://docs.mapbox.com"
            >
              All docs
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="/dr-ui/"
            >
              dr-ui
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="/PageLayout/guides/"
            >
              Guides
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/PageLayout/guides/worldview/"
            >
              Worldview
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Border styling
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col col--auto prose w-2/3-mxl w-full"
          >
            <h1
              className="txt-fancy"
            >
              Border styling
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="dr-ui--page-layout-aside col w-full w-1/3-mxl"
            >
              <aside
                className="scroll-auto-mxl scroll-styled viewport-almost-mxl sticky-mxl"
                data-swiftype-index="false"
                style={
                  Object {
                    "top": "10px",
                  }
                }
              >
                <nav
                  aria-labelledby="on-this-page"
                  className="dr-ui--on-this-page color-text mb24-mxl mb18"
                >
                  <h2
                    className="unprose txt-m txt-bold mb6"
                    id="on-this-page"
                  >
                    On this page
                  </h2>
                  <ul
                    className=""
                  >
                    <li
                      className="mb3-mxl"
                    >
                      <a
                        className="link inline-block link--gray"
                        href="#set-a-filter"
                        style={
                          Object {
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        Set a filter
                      </a>
                    </li>
                    <li
                      className="mb3-mxl"
                    >
                      <a
                        className="link inline-block link--gray"
                        href="#style-the-line"
                        style={
                          Object {
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        Style the line
                      </a>
                    </li>
                  </ul>
                </nav>
                <div
                  className="none block-mxl"
                >
                  <button
                    className="btn"
                    onClick={[Function]}
                    value="Share"
                  >
                    Share your feedback
                  </button>
                </div>
              </aside>
            </div>
            <div
              className="col col--auto w-2/3-mxl w-full prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="set-a-filter"
              >
                Set a filter
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="style-the-line"
              >
                Style the line
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="mt36"
              >
                <a
                  className="unprose block cursor-pointer color-gray color-gray-dark-on-hover transition mb18"
                  href="/PageLayout/guides/worldview/data-sources/"
                >
                  <div
                    className="round flex-parent flex-parent--stretch-cross border border--gray-light border--gray-dark-on-hover border--2 transition"
                  >
                    <div
                      className="flex-child flex-child--grow px18 pt30 pb18"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="flex-parent flex-parent--row"
                      >
                        <div
                          className="flex-child"
                        >
                          <div
                            className="txt-fancy txt-uppercase txt-s txt-spacing1 mt-neg12 mb6 color-gray-dark"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                          >
                            Next
                          </div>
                          <div
                            className="color-gray-dark color-black-on-hover transition"
                          >
                            <div
                              className="txt-bold"
                            >
                              Data sources
                            </div>
                            Some Mapbox vector tilesets, including Mapbox Streets v8 and Boundaries v3, include the worldview data field in several layers.
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="flex-child flex-child--no-shrink w30 flex-parent flex-parent--center-cross border-l"
                      style={
                        Object {
                          "borderColor": "inherit",
                          "borderLeftWidth": "2px",
                        }
                      }
                    >
                      <svg
                        className="events-none icon"
                        focusable="false"
                        role="presentation"
                        style={
                          Object {
                            "height": 30,
                            "width": 30,
                          }
                        }
                      >
                        <use
                          xlinkHref="#icon-chevron-right"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </div>
              <div
                className="my36 block none-mxl"
              >
                <button
                  className="btn"
                  onClick={[Function]}
                  value="Share"
                >
                  Share your feedback
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn btn--blue w60 h60 round-full shadow-darken25 flex flex--center-main flex--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout full layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="wmax1800 w-11/12-mm w-11/12-ml mx-auto px24 px0-mm"
  >
    <div
      className="flex-mm"
    >
      <div
        className="flex-child-no-shrink w-full w180-mm w240-ml mr36-mm undefined"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="sticky-mm scroll-auto-mm scroll-styled viewport-almost-mm px12-mm"
          data-swiftype-index="false"
          id="dr-ui--page-layout-sidebar"
          style={
            Object {
              "top": "10px",
            }
          }
        >
          <div
            className="mb6 border-b border--darken10"
          >
            <div
              className="mb6"
            >
              <div
                className="dr-ui--product-menu"
              >
                <div
                  className="ml-neg3"
                >
                  <div
                    className="inline-block"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                  >
                    <div
                      aria-describedby="tooltip-1"
                      className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-xs px6"
                    >
                      Beta
                    </div>
                    <div
                      className="hide-visually"
                      id="tooltip-1"
                      role="tooltip"
                    >
                      <div
                        className="txt-s wmax120"
                      >
                        This feature is in public beta and is subject to changes.
                      </div>
                    </div>
                  </div>
                </div>
                <a
                  className="txt-fancy txt-l block color-blue-on-hover color-text"
                  href="/dr-ui/"
                >
                  Mapbox Tiling Service
                </a>
              </div>
            </div>
            <div
              className="mb6 h36"
            >
              <div
                className="relative h36"
              >
                <button
                  className="w-full block"
                  onClick={[Function]}
                >
                  <div
                    className="flex flex--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round mb6 w-full"
                    style={Object {}}
                  >
                    <span
                      className="mr6 color-gray"
                    >
                      <svg
                        className="icon w18 h18"
                      >
                        <use
                          xlinkHref="#icon-search"
                        />
                      </svg>
                    </span>
                     
                    <span
                      className="color-gray"
                    >
                      Search
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="none block-mm"
          >
            <nav
              className="mx-neg12 color-text"
            >
              <ul>
                <li>
                  <div
                    className="px12 flex txt-uppercase txt-fancy round-full w-full bg-blue-faint color-blue-deep"
                  >
                    <a
                      className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
                      href="/PageLayout/"
                    >
                      Guides
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
      <div
        className="flex-child-grow"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="dr-ui--breadcrumb pt3 pb12 none block-mm"
          data-swiftype-index="false"
        >
          <span
            className="none inline-block-mm"
          >
            <a
              className="link"
              href="https://mapbox.github.io/dr-ui/"
            >
              Documentation
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className=""
          >
            <span
              className="color-gray-light inline-block none-mm pr6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-arrow-left"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
            <a
              className="link"
              href="/dr-ui/"
            >
              Mapbox Tiling Service
            </a>
            <span
              className="color-gray-light inline-block-mm none px6"
            >
              <svg
                className="events-none icon inline-block align-t"
                focusable="false"
                role="presentation"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-chevron-right"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </span>
          </span>
          <span
            className="color-gray none inline-block-mm"
          >
            Guides
          </span>
        </div>
        <div
          id="docs-content"
        >
          <div
            className="col col--auto prose"
          >
            <h1
              className="txt-fancy"
            >
              Guides
            </h1>
          </div>
          <div
            className="grid grid--gut60"
          >
            <div
              className="col col--auto prose"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="section-1"
              >
                Section 1
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <h2
                id="section-2"
              >
                Section 2
              </h2>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </p>
              <div
                className="my36"
              >
                <button
                  className="btn"
                  onClick={[Function]}
                  value="Share"
                >
                  Share your feedback
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn btn--blue w60 h60 round-full shadow-darken25 flex flex--center-main flex--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;
